@@ -14,7 +14,7 @@ SOURCES = asmlib.c
 HEADERS =					\
 	$(TOPDIR)/include/oratypes.h		\
 	$(TOPDIR)/include/osmlib.h		\
-	$(TOPDIR)/include/osmerror.h		\
+	$(TOPDIR)/include/asmerror.h		\
 	$(TOPDIR)/include/linux/osmcompat32.h	\
 	$(TOPDIR)/include/linux/osmabi.h	\
 	$(TOPDIR)/include/linux/osmdisk.h
